[package]
name = "test-npm"
version = "0.1.0"
authors = ["chaedonggi@gmail.com"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"